<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/heather"
        android:orientation="vertical">

        <TextView
            android:id="@+id/definition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="8"
            android:background="@drawable/shape2"
            android:gravity="center"
            android:text="@string/definition"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/term1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="2"
            android:background="@drawable/shape"
            android:backgroundTint="#313C53"
            android:text="@string/term1"
            android:textColor="#9CFF00"
            android:textSize="20sp"
            app:iconTint="#000000" />

        <Button
            android:id="@+id/term2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="2"
            android:background="@drawable/shape"
            android:backgroundTint="#313C53"
            android:text="@string/term2"
            android:textColor="#9CFF00"
            android:textSize="20sp" />

        <Button
            android:id="@+id/term3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="2"
            android:background="@drawable/shape"
            android:backgroundTint="#313C53"
            android:text="@string/term3"
            android:textColor="#9CFF00"
            android:textSize="20sp" />

        <Button
            android:id="@+id/term4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="2"
            android:background="@drawable/shape"
            android:backgroundTint="#313C53"
            android:text="@string/term4"
            android:textColor="#9CFF00"
            android:textSize="20sp" />

        <Button
            android:id="@+id/next"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/shape"
            android:backgroundTint="#313C53"
            android:text="@string/next"
            android:textColor="#9CFF00"
            android:textSize="20sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>